--- a/samples/coner.html
+++ b/samples/coner.html
@@ -1,5 +1,5 @@
 <a href="https://yes.org.au" class="pridecodes-corner" aria-label="Vote Yes">
-<svg width="149px" height="150px" viewBox="0 0 149 150" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position: fixed;top: 0;border: 0;right: 0;">
+<svg width="149px" height="150px" viewBox="0 0 149 150" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position: fixed;z-index: 9999;top: 0;border: 0;right: 0;">
     <!-- Generator: Sketch 43.2 (39069) - http://www.bohemiancoding.com/sketch -->
     <desc>Created with Sketch.</desc>
     <defs></defs>
